--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
     <div class="video-container">
-        <video src="image/daystarbg(1080P_HD).mp4" autoplay loop muted></video>
+        <video src="image/WhatsApp Video 2024-10-20 at 6.02.34 PM.mp4" autoplay loop muted></video>
         <div class="overlay">
             <div class="container" style="margin-top: 5%;text-align: center;">
                 <h6 style="border-style: solid;border-color: #fce408; border-radius: 20px; display: inline-block;padding: 8px; font-size: 13px; font-weight: 700;border-width: 1px;font-family: 'PolySans Median';" data-aos="fade-up"
